fix(components): update divider: use solid borders and adjust spacing for alignment

--- a/packages/theme/divider.scss
+++ b/packages/theme/divider.scss
@@ -7,7 +7,7 @@ $divider-sizes: small, medium, large;
 .p-divider {
   position: relative;
   background-color: var(--p-base-bg);
-  color: var(--p-base-text);
+  color: var(--p-base-border);
 
   // Divider line styles
   &__line {
@@ -18,6 +18,7 @@ $divider-sizes: small, medium, large;
     transform: translateY(-50%);
     pointer-events: none;
     color: var(--p-base-border);
+    box-sizing: content-box;
   }
 
   // Divider content styles
@@ -36,14 +37,16 @@ $divider-sizes: small, medium, large;
       &.p-divider--horizontal {
         margin: var(--p-padding-v-#{$size}) 0;
         .p-divider__content {
-          padding: 0 var(--p-padding-h-#{$size});
+          padding-left: var(--p-padding-h-#{$size});
+          padding-right: var(--p-padding-h-#{$size});
           font-size: var(--p-font-size-#{$size});
         }
       }
 
       // Vertical divider size variants
       &.p-divider--vertical {
-        margin: 0 var(--p-margin-h-#{$size});
+        margin-left: var(--p-margin-h-#{$size});
+        margin-right: var(--p-margin-h-#{$size});
       }
     }
   }
@@ -54,6 +57,7 @@ $divider-sizes: small, medium, large;
     vertical-align: middle;
     height: 0.8em;
     margin-top: -0.2em;
+    box-sizing: content-box;
   }
 
   // Horizontal divider specific styles
